--- a/activity-backend/package.json
+++ b/activity-backend/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "config": "^3.3.6",
     "express": "^4.17.1",
     "express-cassandra": "^2.6.0"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
