--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,22 +4,22 @@ services:
     container_name: activity-backend
     build: ./activity-backend
     volumes:
-      - "./:/activity-backend"
-      - "/activity-backend/node_modules"
+      - "./activity-backend:/usr/src/activity-backend"
+      - "/usr/src/activity-backend/node_modules"
     ports:
       - 5000:5000
     stdin_open: true
     environment:
       - CHOKIDAR_USEPOLLING=true
-    command: npm start
+    command: ["/usr/src/activity-backend/wait-for-it.sh", "cassandra:9042", "--", "npm", "start"]
     depends_on:
       - cassandra
   feed-backend:
     container_name: feed-backend
     build: ./feed-backend
     volumes:
-      - "./:/feed-backend"
-      - "/feed-backend/node_modules"
+      - "./feed-backend:/usr/src/feed-backend"
+      - "/usr/src/feed-backend/node_modules"
     ports:
       - 5008:5008
     stdin_open: true
@@ -32,8 +32,8 @@ services:
     container_name: feed-web
     build: ./feed-web
     volumes:
-      - "./:/feed-web"
-      - "/feed-web/node_modules"
+      - "./feed:/usr/src/feed-web"
+      - "/usr/src/feed-web/node_modules"
     ports:
       - 3000:3000
     stdin_open: true
@@ -42,6 +42,7 @@ services:
     command: yarn start
     depends_on:
       - feed-backend
+  
   redis:
     image: redis
   cassandra:
