--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,14 @@ services:
     stdin_open: true
     environment:
       - CHOKIDAR_USEPOLLING=true
-    command: ["/usr/src/activity-backend/wait-for-it.sh", "cassandra:9042", "--", "npm", "start"]
+    command:
+      [
+        "/usr/src/activity-backend/wait-for-it.sh",
+        "cassandra:9042",
+        "--",
+        "npm",
+        "start",
+      ]
     depends_on:
       - cassandra
   feed-backend:
@@ -32,7 +39,7 @@ services:
     container_name: feed-web
     build: ./feed-web
     volumes:
-      - "./feed:/usr/src/feed-web"
+      - "./feed-web:/usr/src/feed-web"
       - "/usr/src/feed-web/node_modules"
     ports:
       - 3000:3000
@@ -42,7 +49,7 @@ services:
     command: yarn start
     depends_on:
       - feed-backend
-  
+
   redis:
     image: redis
   cassandra:
